Refactor parking application handlers and services
- Simplified exception handling in RegisterHandler, ReportHandler, and UserHandler by removing try-catch blocks and using ResponseEntity directly.
- Added validation annotations to User and Vehicle models for better input validation.
- Introduced GlobalExceptionHandler for centralized exception handling across the application.
- Updated application properties for PostgreSQL configuration and added test profile for H2 in-memory database.
- Implemented DTOs for Register, User, and Vehicle to prevent exposing JPA entities directly in API responses.
- Enhanced logging in ParkingService and RegisterService for better traceability.
- Removed unused imports and cleaned up code for improved readability.