@@ -2,18 +2,16 @@ package com.parking.core.handlers;
 
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.server.ResponseStatusException;
 
+import com.parking.core.model.Response.PageResponse;
+import com.parking.core.model.User;
 import com.parking.core.service.UserService;
 
-
-import java.util.Collections;
 import java.util.Map;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-
 
 @RestController
 @RequestMapping("api/v1/parking/users")
@@ -25,36 +23,20 @@ public class UserHandler {
     }
 
     @GetMapping("/user")
-    public ResponseEntity<?> findUser(
-        @RequestParam(required = false) String name, 
-        @RequestParam(required = false) String username, 
-        @RequestParam(required = false) String email) {
-
-            try {
-                return ResponseEntity.ok(Collections.singletonMap("user", userService.getUser(name, username, email)));
-            } catch (ResponseStatusException e) {
-                return ResponseEntity
-                                .status(e.getStatusCode())
-                                .body(Collections.singletonMap("message", e.getReason()));
-            }
+    public ResponseEntity<Map<String, Object>> findUser(
+            @RequestParam(required = false) String name,
+            @RequestParam(required = false) String username,
+            @RequestParam(required = false) String email) {
+        return ResponseEntity.ok(Map.of("user", userService.getUser(name, username, email)));
     }
 
     @GetMapping("/")
-    public ResponseEntity<?> getAll() {
-        try {
-
-            return ResponseEntity.ok(Map.of(
-                "users", userService.getAllUsers()
-            ));
-        } catch (ResponseStatusException e) {
-            return ResponseEntity
-                            .status(e.getStatusCode())
-                            .body(Collections.singletonMap("message", e.getReason()));
-        }
+    public ResponseEntity<Map<String, Object>> getAll() {
+        return ResponseEntity.ok(Map.of("users", userService.getAllUsers()));
     }
-    
+
     @GetMapping("/pages")
-    public ResponseEntity<?> getMethodName(@RequestParam int pageNumber) {
+    public ResponseEntity<PageResponse<User>> getPaginated(@RequestParam int pageNumber) {
         return ResponseEntity.ok(userService.getUsersPaginated(pageNumber));
     }
     
